# iprovide

./: pyproject.toml  readthedocs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  iprovide.rst  modules.rst
iprovide/: __init__.py
tests/: test_interface.py  test_iprovide.py
